force-app/main/default/objects/Ativo_do_Aditivo_Contratual__c/Ativo_do_Aditivo_Contratual__c.object-meta.xml
<CustomObject>
    <label>Ativo do Aditivo Contratual</label>
    <nameField>
        <label>Nome de Ativo do Aditivo Contratual</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ativos do Aditivo Contratual</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>