force-app/main/default/objects/Ativo_do_Aditivo_Contratual__c/fields/Aditivo_Contratual_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Aditivo_Contratual_Relacionado__c</fullName>
    <label>Aditivo Contratual Relacionado</label>
    <referenceTo>Aditivos_Contratuais__c</referenceTo>
    <relationshipLabel>Produtos da Proposta do Aditivo</relationshipLabel>
    <relationshipName>Ativos_do_Aditivo_Contratual</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>