force-app/main/default/objects/Ativo_do_Aditivo_Contratual__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ativos do Aditivo Contratual</relationshipLabel>
    <relationshipName>Ativos_do_Aditivo_Contratual</relationshipName>
    <type>Lookup</type>
</CustomField>