force-app/main/default/objects/Ativo_do_Aditivo_Contratual__c/fields/Imagem__c.field-meta.xml
<CustomField>
    <fullName>Imagem__c</fullName>
    <formula>Produto_Relacionado__r.Imagem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem</label>
    <type>Text</type>
</CustomField>