force-app/main/default/objects/Ativo_do_Aditivo_Contratual__c/fields/Produto_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Produto_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Relacionado</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ativos do Aditivo Contratual</relationshipLabel>
    <relationshipName>Ativos_do_Aditivo_Contratual</relationshipName>
    <type>Lookup</type>
</CustomField>