force-app/main/default/objects/Ativo_do_Aditivo_Contratual__c/fields/Valor_Unit_rio__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unit_rio__c</fullName>
    <label>Valor Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>